clusters/talos-cluster/zitadel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel-server
  namespace: zitadel
spec:
  selector:
    app: zitadel
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
